--- a/app/src/main/res/layout/activity_subscription_check_out.xml
+++ b/app/src/main/res/layout/activity_subscription_check_out.xml
@@ -179,8 +179,8 @@
                                 android:background="@drawable/rounded_gray_edit_text"
                                 android:gravity="start"
                                 android:hint="Note..."
-                                android:maxLines="4"
-                                android:minLines="4"
+                                android:maxLines="3"
+                                android:minLines="3"
                                 android:padding="10dp"
                                 android:textSize="16sp" />
                         </LinearLayout>
@@ -192,18 +192,104 @@
 
         </RelativeLayout>
 
-        <com.localfriend.fonts.CustomFontPtSansText
-            android:id="@+id/txt_total2"
+        <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_above="@+id/tv_make_payment"
+            android:layout_above="@+id/rl_discount"
             android:layout_marginBottom="5dp"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp"
+            android:padding="5dp">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/pt_bold"
+                android:text="Total Price"
+                android:textColor="@color/black"
+                android:textSize="15sp" />
+
+            <com.localfriend.fonts.CustomFontPtSansText
+                android:id="@+id/txt_total2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:text="Rs 3000"
+                android:textColor="@color/black"
+                android:textSize="15sp"
+                app:textStyle="@integer/roboto_bold" />
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:id="@+id/rl_discount"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_above="@+id/rl_promo"
+            android:layout_marginBottom="10dp"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp"
+            android:layout_marginTop="-10dp"
+            android:padding="5dp">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/pt_bold"
+                android:text="Discount"
+                android:textColor="@color/black"
+                android:textSize="15sp" />
+
+            <com.localfriend.fonts.CustomFontPtSansText
+                android:id="@+id/txt_discount"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:text="Rs 0"
+                android:textColor="@color/black"
+                android:textSize="15sp"
+                app:textStyle="@integer/roboto_bold" />
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:id="@+id/rl_promo"
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:layout_above="@+id/tv_make_payment"
+            android:layout_marginBottom="10dp"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp"
+            android:background="@drawable/rounded_gray_edit_text"
             android:gravity="center"
-            android:padding="10dp"
-            android:text="Total Price :- Rs 3000/mo"
+            android:text="Discount    :- Rs 3000"
             android:textColor="@color/black"
-            android:textSize="16sp"
-            app:textStyle="@integer/roboto_bold" />
+            android:textSize="15sp"
+            android:visibility="visible">
+
+            <TextView
+                android:id="@+id/txt_apply"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_alignParentRight="true"
+                android:background="@drawable/tv_gradient_bg"
+                android:fontFamily="@font/pt_regular"
+                android:gravity="center"
+                android:paddingLeft="20dp"
+                android:paddingRight="20dp"
+                android:text="Apply"
+                android:textColor="@color/white"
+                android:textSize="16sp" />
+
+            <EditText
+                android:id="@+id/edt_promo"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_toLeftOf="@+id/txt_apply"
+                android:background="@null"
+                android:inputType="text"
+                android:fontFamily="@font/pt_regular"
+                android:hint="Promo Code"
+                android:paddingLeft="20dp" />
+        </RelativeLayout>
 
         <com.localfriend.fonts.CustomFontPtSansText
             android:id="@+id/tv_make_payment"
@@ -216,7 +302,7 @@
             android:background="@drawable/curvy_gradient_white_bg"
             android:gravity="center"
             android:padding="10dp"
-            android:text="Place Order"
+            android:text="Pay Rs. 3000"
             android:textColor="@color/white"
             android:textSize="16sp"
             app:textStyle="@integer/roboto_medium" />
