--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -3,6 +3,7 @@
     <string-array name="ld_activityScreenTitles">
         <item>Home</item>
         <item>Orders</item>
+        <item>Subscriptions</item>
         <item>Wishlist</item>
         <item>Address</item>
         <item>Need Help ?</item>
@@ -10,6 +11,7 @@
 
     <array name="ld_activityScreenIcons">
         <item>@drawable/menu_home</item>
+        <item>@drawable/menu_orders</item>
         <item>@drawable/menu_orders</item>
         <item>@drawable/menu_wishlist</item>
         <item>@drawable/menu_adress</item>
